# AloneInTheDarkReHaunted

./: AITD1.cpp  AITD1.h  AITD1_Tatou.cpp  AITD2.cpp  AITD2.h  AITD3.cpp  AITD3.h  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  CONTRIBUTING.MD  JACK.cpp  JACK.h  README.md  REMASTER.md  Tatou.rc  actorList.cpp  actorList.h  aitdBox.cpp  aitdBox.h  anim.cpp  anim.h  anim2d.cpp  anim2d.h  animAction.cpp  animAction.h  animAction_temp.cpp  appArchive.h  background_ps.sc  baseTypes.h  bgfxGlue.cpp  bgfxGlue.h  bgfxPatch.mm  blur_ps.sc  brightpass_ps.sc  common.h  composite_ps.sc  config.h  configRemaster.cpp  configRemaster.h  (+152 more)
OldSrc/: AITD1.cpp  AITD1.h  AITD2.h  AITD3.cpp  CMakeLists.txt  JACK.h  Tatou.rc  actorList.h  aitdBox.cpp  anim.h  anim2d.cpp  anim2d.h  animAction_temp.cpp  brightpass_ps.sc  common.h  composite_ps.sc  config.h  configRemaster.h  controlsMenu.h  debugFont.cpp  debugger.cpp  dustParticles.cpp  embeddedShaders.h  embeddedShadersMacro.h  endianess.h  evalVar.cpp  exceptionHandler.cpp  fitd.cpp  flat_poly_atlas_README.md  floor.cpp  fmopl.cpp  font.cpp  font.h  fontTTF.cpp  fs_blur.sc  fs_bright_pass.sc  fs_composite.sc  fs_film_grain.sc  gameTime.cpp  gameTime.h  (+55 more)
OldSrc/vs2026/: CMakeCache.txt
TatouSource/: ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  FITD.sln  README.md  rebuild_hda_archive.bat  rebuild_hda_archive.ps1
TatouSource/DOSBoxStub/: CMakeLists.txt  DOSBox.rc  main.cpp
TatouSource/Docs/: ARCHITECTURE_DOCUMENTATION.md  AUDIT_INDEX.md  COMPLETE_DOCUMENTATION_INDEX.md  COMPREHENSIVE_SOLUTION_AUDIT.md  CONTRIBUTING.md  DOCUMENTATION_AND_BUG_FIX_PLAN.md  DOCUMENTATION_INDEX.md  EDGE_CASES_VERIFICATION.md  EXECUTIVE_SUMMARY.md  FINAL_AUDIT_CONCLUSION.md  FINAL_SOLUTION_AUDIT_REPORT.md  FINAL_VERIFICATION_CHECKLIST.md  GAMEPLAY_TESTING_CHECKLIST.md  INVESTIGATION_REPORT.md  MASTER_SUMMARY.md  NATIVE_HELPERS_AUDIT.md  NATIVE_SCRIPTS_AUDIT.md  NATIVE_SCRIPTS_COMPLETE_AUDIT.md  NATIVE_SCRIPTS_QUICK_REFERENCE.md  README.md  README_DOCUMENTATION.md  RELEASE_NOTES.md  RESOLUTION_SUMMARY.md  SSGI_LIGHT_PROBES_IMPLEMENTATION.md  TTF_FONT_README.md  VERIFICATION_COMPLETE.md  VERIFICATION_REPORT.md
TatouSource/Fitd/: CMakeLists.txt  Tatou.rc  fitd.cpp  resource.h
TatouSource/FitdLib/: AITD3.h  (+111 more)
TatouSource/tools/: CMakeLists.txt  build_hda_archive.cpp
dear-imgui/: imgui_user.inl
src/: bgfx.idl.inl
vs2026/: CMakeCache.txt
(+55 files in other folders)
